Format chapters 13 and 14 of willpower

--- a/willpower/chapter4.tex
+++ b/willpower/chapter4.tex
@@ -251,7 +251,7 @@
 
 \section{Арганізацыя трапезы. Як есьці?}
 
-Фаіна Ранеўская неяк сказала: «Даражэнькая, калі хочаце схуднець — ежце голай і перад люстэркам». Магчыма, гэта спрацуе, але ёсьць і менш экстравагантныя спосабы арганізаваць працэс ежы так, каб зьесьці меней і з~большым задавальненьнем. На жаль, сёньня людзі ядуць вельмі хутка, адцягваючыся на смартфоны і сэрыялы і не надаючы належнай увагі ежы. Гэта вядзе да аўтаматычнага пераяданьня.
+Фаіна Ранеўская неяк сказала: «Даражэнькая, калі хочаце схуднець~--- ежце голай і перад люстэркам». Магчыма, гэта спрацуе, але ёсьць і менш экстравагантныя спосабы арганізаваць працэс ежы так, каб зьесьці меней і з~большым задавальненьнем. На жаль, сёньня людзі ядуць вельмі хутка, адцягваючыся на смартфоны і сэрыялы і не надаючы належнай увагі ежы. Гэта вядзе да аўтаматычнага пераяданьня.
 
 Калі вы добра ясьце, то і больш насалоджваецеся смакам, колерам і пахамі, становіцеся больш сытымі і здаволенымі~--- а~значыць, будзеце зь лёгкасьцю прытрымлівацца такой сыстэмы харчаваньня. Важна падтрымліваць пастаянны рэжым харчаваньня бяз рэзкіх зьменаў часу сьняданку, абеду і вячэры: тады арганізм наладжвае ўнутраны гадзіньнік і пачынае рыхтавацца да сталаваньня загадзя. 
 
