--- a/willpower/chapter4.tex
+++ b/willpower/chapter4.tex
@@ -32,6 +32,11 @@
 
 \emph{Тое, як мы ставімся да ежы, праецыруецца і на нашае стаўленьне да жыцьця наогул. Таму для таго, каб скласьці ўяўленьне пра чалавека, убачыць яго сапраўднага, паабедайце з~ім. Тое, як ён есьць, як абыходзіцца зь ежай, як жуе, як пачынае і заканчвае сталаваньне, шмат скажа пра яго асобу.}
 
+\begin{figure}[ht!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch4/1.pdf}
+\end{figure}
+
 \textbf{«Ты~--- гэта тое, што ты ясі»~---} і мы разумеем важнасьць якаснага складу ежы. «Калі ты ясі, колькі трэба, ты корміш цела. А тым, што пераядаеш, ты корміш хваробы»,~--- старажытныя і мудрыя казалі так. Сёньня мы таксама разумеем, што важная таксама колькасьць спажыванай ежы. Харчаваньне можа як павялічваць рызыкі шматлікіх захворваньняў, так і зьмяншаць іх.
 
 \emph{Няма, бадай, такой хваробы, цячэньне якой так ці інакш не было б зьвязанае з~харчаваньнем, акрамя, мабыць, траўмаў. Хоць і траўмы магчымыя, калі вы ясьце на хаду і пасьлізгваецеся на роўным месцы.}
@@ -171,6 +176,10 @@
 
 \emph{Я прытрымліваюся стражэйшай сыстэмы: ем два разы на дзень, і харчовае вакно ў~мяне звычайна роўна 6 гадзінам~--- сьняданак у~8:00, абед/вячэра ў~14:00.}
 
+\begin{figure}[htb]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch4/2.pdf}
+\end{figure}
 %((Калі есьці? Рэжым харчаваньня Рэгулярны фастынг 24/0 Сьняданак Абед Вячэра Частыя прамежкі безь перакусаў Аптымальная частасьць харчаваньня Шчыльны высокабялковы сьняданак Звужайце харчовае вакно плыўна 12/12 тыповая 10/14 8/16 папулярная 6/8 4/20 дыета ваяра Лёгкая раньняя вячэра Большую частку калёрыяў зьесьці ўдзень))
 
 \subsection*{Хранабіялёгія харчаваньня.}
@@ -193,6 +202,11 @@
 
 \subsection*{Сьняданак і вячэра.}
 Цяпер, калі вы разабраліся з~агульнымі правіламі рэжыму, час перайсьці да прыёмаў ежы: сьняданку, абеду і вячэры. Я рэкамэндую рэгулярна сьнедаць у~адзін і той жа час, на працягу гадзіны-паўтары пасьля абуджэньня~--- не пазьней, і шчыльна, па-каралеўску. Сьняданак павінен складаць ня менш за 30--40\,\% сутачнай калярыйнасьці і зьмяшчаць мінімум 30--40 г бялку. У аснове сьняданку павінны быць якасныя бялковыя прадукты: яйкі, рыба, курыца з~гароднінай і зелянінай, а~ня каша. Да іх можна дадаваць тлушчы і некрухмалістую гародніну. Калі раніцай няма апэтыту, менш ежце на вячэру ці прапусьціце вячэрні прыём ежы.
+
+\begin{figure}[htb]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch4/3.pdf}
+\end{figure}
 
 \emph{Прыклады сьняданкаў, абедаў і вячэр вы можаце знайсьці на маім Youtube-канале, дзе ў~вольным доступе выкладзеныя відэа-ролікі прыгатаваньня страў тыднёвага рацыёну. Заўсёды майце зь вечара плян сьняданку на раніцу, захоўвайце запас замарожанай ежы (агародніна, мяса, рыба, ягады, зеляніна), каб у~выпадку чаго ў~вас быў запасны варыянт сьняданку.}
 
@@ -259,6 +273,11 @@
 
 Для таго каб прытрымлівацца свайго харчаваньня ў~доўгатэрміновай пэрспэктыве, трэба кантраляваць голад і сытасьць. Калі вас мучыць голад днём ці ўвечары або вы ясьце зусім без апэтыту, то ня зможаце доўга пратрымацца ў~гэтым рэжыме на адной сіле волі. Таму важна пачаць назіраць за сваім голадам і сытасьцю, вывучаць, што і як на іх уплывае.
 
+\begin{figure*}[tb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch4/4.pdf}
+\end{figure*}
+
 \textbf{Схэму харчаваньня плянуйце ад сьняданку:}
 \begin{itemize}
   \item шчыльны сьняданак, каб насычэньня хапіла да абеду;
@@ -313,12 +332,22 @@
 
 \tipbox{Сытасьць цікавым чынам зьвязаная з~павагай да ежы. Людзі, якія лічаць сваю порцыю больш сытнай, паказваюць значнае зьніжэньне гармону голаду грэліну. Нядзіўна, што і кошт віна ўплывае на яго смак.}
 
+\begin{figure}[ht!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch4/5.pdf}
+\end{figure}
+
 Адным з~выдатных інструмэнтаў павышэньня некалярыйнага задавальненьня зьяўляецца разьвіцьцё смаку. Чым больш характарыстык ежы мы можам назваць, тым больш атрымліваем уражаньняў і стымулаў. Для гэтага трэба пашыраць свой слоўнікавы запас, апісваць смак, выгляд, пах кожнага прадукту, даваць адценьні базавым смакам: салодкае, салёнае, кіслае, горкае, умамі,~--- і іх узаемадзеяньню паміж сабой. Рабіцеся гурманамі!
 
 \subsection*{Пазбаўцеся ад стымулятараў апэтыту.}
 Сярод прадуктаў і дадаткаў ёсьць тыя, якія насычаюць, і тыя, якія ўзмацняюць апэтыт. Стымулююць пераяданьне смажанае ці вэнджанае, соль, цукар, араматызатары, фарбавальнікі, цукразаменьнікі, узмацняльнікі смаку, а~таксама іх спалучэньні. Насычаюць~--- клятчатка, зеляніна, спэцыі, гарэхі. Зьніжаюць апэтыт горкі і кіслы смакі. Сярод нутрыентаў добра насычае бялок, ён дае доўгую сытасьць. Невялікія колькасьці тлушчу запавольваюць пэрыстальтыку і могуць падоўжыць пачуцьцё сытасьці.
 
 \emph{Важным кампанэнтам сытасьці з'яўляецца аб'ём зьедзенага: калі павялічыць колькасьць прадуктаў зь нізкай удзельнай шчыльнасьцю, вы зможаце есьці болей аб'ёму і меней калёрыяў. Напрыклад, у~кашу варта дадаць болей гародніны і зеляніны.}
+
+\begin{figure*}[tb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch4/6.pdf}
+\end{figure*}
 
 \subsection*{Цьвёрдая дыета.}
 Цяпер модна многія прадукты ёсьць у~здробненым выглядзе: супы-пюрэ, катлеты, фрэшы. Жаваньне вельмі важнае ня толькі для насычэньня, але і для мозгу~--- гэты працэс павышае сытасьць і зьніжае ўзровень гармону стрэсу картызолу. У жывёльных мадэлях навукоўцы выявілі, што мяккая здробненая ежа (soft diet) прыводзіла да зьніжэньня працоўнай памяці, зьніжэньня нэўрагенэзу ў~гіпакампе, павелічэньня рызыкі нэўрадэгенэратыўных захворваньняў. Таму карысна пагрызьці гародніну і пажаваць мяса~--- як для дзяцей, каб правільна фармаваўся тварны шкілет, так і для дарослых, каб адчуваць сябе больш сытымі. \textbf{Грызіце гародніну, а~не сябе ці навакольных!}
@@ -368,6 +397,11 @@
 
 Глыбокая апрацоўка вядзе да страты карысных спалучэньняў, пагаршэньня якасьці прадукту, уключэньня ў~яго вялікай колькасьці дабавак, такіх як схаваны цукар і соль. Перапрацаваная ежа можа нават цалкам супадаць па калярыйнасьці і макронутрыентах, але пры гэтым інакш узьдзейнічаць на харчовыя паводзіны чалавека.
 
+\begin{figure}[ht!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch4/7.pdf}
+\end{figure}
+
 \tipbox{Дасьледаваньні паказалі, што прадукты з~высокай ступеньню апрацоўкі горш насычаюць, зьядаюцца на 50\,\% хутчэй і людзі зьядаюць да дасягненьня сытасьці цэльных прадуктаў на 2500 супраць 3000\,ккал перапрацаваных. }
 
 Гэта значыць проста пераход на цэльныя прадукты можа скараціць пераяданьне на 500\,ккал у~дзень~--- без пачуцьця голаду! Іншыя дасьледаваньні пацьвярджаюць, што перапрацаваныя прадукты правакуюць набор вагі, павялічваюць рызыку сардэчна-сасудзістых захворваньняў\index{сардэчна-сасудзістыя захворваньні} і зьніжаюць працягласьць жыцьця. Кожныя 10\,\% калёрыяў з~ультрапэрапрацаваных прадуктаў на 10\,\% павялічваюць рызыку разьвіцьця раку. Даданьне цукру, солі, тлушчу ў~прадукты ўзмацняе цягу да іх, іх эфэкт падсумоўваецца.
@@ -384,6 +418,12 @@
 \textbf{Зьменшыце долю прадуктаў з~высокай калярыйнай шчыльнасьцю,} г.~зн. «бедных прадуктаў», у~якіх шмат калёрыяў і мала нутрыентаў. У першую чаргу гэта тычыцца мучных і кандытарскіх вырабаў, якія зьмяшчаюць шмат цукру і тлушчу. Нават проста крупы, якія зьядаюцца асобна, ня будуць здаровым выбарам: абавязкова дадавайце ў~кожны прыём ежы больш зеляніны і гародніны, каб калярыйныя прадукты займалі меншую частку талеркі.
 
 \textbf{Павялічце частку прадуктаў з~высокай біялягічнай каштоўнасьцю,} г.~зн. «багатых прадуктаў», якія ўтрымліўваюць мала калёрыяў, але шмат карысных злучэньняў, уключаючы фітанутрыенты, клятчатку~--- гэта ліставая зеляніна, ягады, водарасьці, грыбы, гарэхі, насеньне, парасткі і да т.~п. Нават невялікая порцыя гарэхаў робіць прыкметнае дадатнае ўзьдзеяньне на арганізм, зьмяншаючы рызыкі захворваньняў, паляпшаючы абмен халестэрыну. Зеляніна, грыбы і водарасьці можна сьмела патроху дадаваць амаль да любой стравы. Калі зімой зеляніна і ягады недаступныя, выкарыстоўвайце замарожаную зеляніну або высушаныя водарасьці, пасыпайце ежу сушанымі травамі ды спэцыямі. Гэта міт, што спэцыі правакуюць язву страўніка і ўзмацняюць апэтыт: наадварот~--- зьніжаюць колькасьць зьедзенага, станоўча ўплываюць на здароўе. Важна толькі выкарыстоўваць цэльныя спэцыі, а~ня сумесі з~сольлю, глутаматам і ўзмацняльнікамі смаку.
+
+\begin{figure}[ht!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch4/8.pdf}\quad
+  \includegraphics[scale=1.5]{willpower/ch4/9.pdf}
+\end{figure}
 
 \subsection*{Правіла разнастайнага харчаваньня.}
 Важна не замыкацца на невялікай колькасьці прадуктаў: чым разнастайней мы ямо, тым лепей закрываем свае запатрабаваньні ў~неабходных арганізму спалучэньнях. Добра, калі ў~нас за сталом на працягу дня розныя прадуктовыя групы, стравы не паўтараюцца, а~за прыём ежы мы зьядаем ня менш за 5--7 розных прадуктаў.
@@ -423,6 +463,11 @@
   \item павялічце колькасьць харчовых групаў розных расьлінаў: гародніна, зеляніна, садавіна, ягады;
   \item ежце якасныя расьлінныя прадукты зь мінімальнай апрацоўкай, яны павінны складаць аснову здаровага рацыёну.
 \end{itemize}
+
+\begin{figure*}[tb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch4/10.pdf}
+\end{figure*}
 
 \emph{Plant based diet~--- так званая дыета, заснаваная на расьлінах,~--- прапануе зьядаць ня менш за 500 г зеляніны, гародніны і садавіны ў~дзень, а~калі больш, то яшчэ лепш.}
 
@@ -580,6 +625,11 @@
 
 Для гэтага перастаньце саліць, выкарыстоўваць соевы соўс, памяншайце колькасьць гатовых прадуктаў і паўфабрыкатаў (шмат натрыю ў~хлебе і выпечцы, сырах, каўбасах і да т.~п.), а~таксама ежце больш цэльнай расьліннай ежы~--- менавіта яна зьяўляецца крыніцай калію.
 
+\begin{figure}[ht!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch4/11.pdf}
+\end{figure}
+
 Як і ўсе скрайнасьці, поўнае пазьбяганьне солі небясьпечна. Дасьледаваньні паказалі, што вельмі малая і вельмі вялікая колькасьць солі шкодныя для здароўя. Калі вы часам зьядаеце гатовыя прадукты, то атрымліваеце зь імі дастаткова натрыю. Калі хочацца разнастаіць смак, выкарыстайце больш спэцый і пернасьцяў. Яны~--- сапраўдныя супэрфуды, утрымліваюць шмат карысных злучэньняў, даюць сытасьць. Раней перац прадавалі на вагу золата, сёньня гэта даступна кожнаму. Чырвоны і чорны перцы, праванская трава, размарын, кмен, куркума, імберац, кроп, гвазьдзік, шафран і многія іншыя~--- гэта смачна і карысна! Насуперак мітам, спэцыі зьніжаюць пераяданьне, перац не правакуе язвавую хваробу, а~наадварот~--- абараняе ад яе! Такія спэцыі, як размарын, абараняюць прадукты ад пашкоджаньняў пры тэрмаапрацоўцы.
 
 \subsection*{Пытаньні і заданьні}
@@ -617,6 +667,11 @@
 «Страчваю час, а~хацелася б вагу». Зьніжаючы колькасьць калёрыяў, многія дзівяцца, маўляў, ня ем ужо тры гадзіны, і чаму я да гэтага часу не схуднеў? Мне вельмі хочацца, каб вы зразумелі: мае сэнс укараняць у~свае харчовыя паводзіны толькі тыя правілы, якіх вы можаце прытрымлівацца на працягу дзесяцігодзьдзяў. Усе кароткатэрміновыя дыеты шкодзяць і адно правакуюць набор вагі. Радыкальнае зьніжэньне вагі (crash diets) можа сур'ёзна нашкодзіць мэтабалізму (мэтабалічная адаптацыя), гарманальнай рэгуляцыі і харчовым паводзінам.
 
 \emph{Героі ТБ-шоў The Biggest Loser, якія худнеюць за грошы, праз 6 гадоў пасьля перадачы моцна набралі вагу (13 з~14 удзельнікаў), а~колькасьць спальваных імі калёрыяў была меншай. Таму тым людзям, якія моцна схуднелі за два тыдні, трэба хутчэй спачуваць, а~не зайздросьціць.}
+
+\begin{figure}[ht!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch4/12.pdf}
+\end{figure}
 
 \subsection*{Ліпастат.}
 У нашым арганізьме існуюць мэханізмы падтрыманьня пэўнага адсотку тлушчу незалежна ад ваганьняў каляражу. Калі мы больш зьелі, то падсьвядома і рухаемся больш, больш вытрачаем на тэрмагенэз\index{тэрмагенэз}. Гэты мэханізм, які фармаваўся на працягу мільёнаў гадоў, нашмат дакладнейшы за праграмы для падліку калёрыяў і да таго ж цалкам аўтаматызаваны. Наш мозг апрацоўвае мноства ўваходных зьвестак і прымае рашэньні, якія ўплываюць на нашы харчовыя паводзіны, сытасьць і апэтыт. Занадта смачная ежа, лішак сьвятла, стрэсу, зьмена долі тлушчу зьбіваюць наш ліпастат.
@@ -660,6 +715,11 @@
 
 У падліку калёрыяў ёсьць шэраг нэгатыўных аспэктаў: гэта складана рабіць на доўгатэрміновай аснове, бо патрабуе валявых сьвядомых намаганьняў, людзі схільныя да самападману, падлік калёрыяў правакуе абмежавальныя паводзіны і разлады харчовых паводзінаў, пастаянна пачуцьцё голаду вельмі дыскамфортнае. Калёрыі ежы замест крыніцы энэргіі становяцца пагрозай, і гэта не спрыяе нашаму псыхічнаму здароўю. Таму для кожнага канкрэтнага чалавека важна абраць найболей аптымальны для яго падыход да паніжэньня каляражу. Для кагосьці гэта будзе проста зьніжэньне стрэсу і трывогі.
 
+\begin{figure}[ht!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch4/13.pdf}
+\end{figure}
+
 Існуюць розныя прыёмы, кожны зь іх дае невялікі вынік, але ў~суме яны дзейнічаюць эфэктыўна~--- напрыклад, кіраваньне сытасьцю, стварэньне асяродзьдзя без харчовых трыгераў\index{трыгер}, мікрамэнэджмэнт харчаваньня, прыёмы гастрафізікі. Стварыўшы такую сыстэму, вы будзеце есьці менш, а~адчуваць сябе больш сытымі. Напрыклад, звужэньне харчовага акна да 6--8 гадзінаў ужо аўтаматычна прыводзіць да таго, што мы ямо на 500 ккал у~содні менш, а~выбар цэльнай ежы замест перапрацаванай~--- да зьніжэньня каляражу на супастаўнае значэньне пры захаваньні ранейшай сытасьці.
 
 \subsection*{Харчовае ўстрыманьне.}
@@ -668,6 +728,11 @@
 \subsection*{Удзельная калярыйная шчыльнасьць.}
 Агульная ідэя~--- скарачаць колькасьць калярыйных прадуктаў, адначасова павялічваючы аб'ём малакалярыйных. Напрыклад, есьці ня проста крупы, а~іх сумесь з~гароднінай і зелянінай, заправіць салату кефірам або воцатам і да т.~п. Так мы будзем есьці больш па аб'ёме, а~дастатковы аб'ём ежы расьцягвае сьценкі страўніка, што стымулюе выдзяленьне гармонаў сытасьці.
 
+\begin{figure}[ht!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch4/14.pdf}
+\end{figure}
+
 \subsection*{Мяняйце прапорцыі прадуктаў.}
 Напрыклад, дзьве трэці агародніны і трэць крупаў на талерцы. Можна і перакінуць прапорцыі, зрабіць салату з~фасольлю, а~не фасолю, пасыпаную невялікай колькасьцю зеляніны. Вы можаце падлічыць усе свае прадукты за дзень і намаляваць сваю асабістую «прадуктовую талерку» для лепшага разуменьня, што і ў~якіх прапорцыях вы ясьце. 
 
@@ -675,8 +740,18 @@
 
 \emph{Эфэктам насычэньня валодае і вада: 500\,мл вады, выпітыя перад прыёмам ежы, зьмяншаюць аб'ём зьедзенага на 22\,\%. А калі вы дадасьце ў~ваду імберац або мэнтол, гэта дасьць яшчэ мацнейшае насычэньне. Іншае дасьледаваньне паказала, што зьедзены першым суп памяншаў пачуцьцё голаду і колькасьць зьедзеных калёрыяў на 100\,ккал.}
 
+\begin{figure}[ht!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch4/15.pdf}
+\end{figure}
+
 \subsection*{Кіраваньне голадам і сытасьцю.}
 Сытасьць~--- гэта зьнікненьне голаду, таму для таго, каб злавіць сытасьць, важна мець апэтыт перад ежай. Як толькі апэтыт зьнікае~--- гэта і ёсьць сапраўдны пункт сытасьці. Насычэньне~--- шматступенны працэс, дзе мы можам кіраваць кожным этапам: сэнсарнае насычэньне, мэханічнае, кішачнае, мазгавое, энэргетычнае.
+
+\begin{figure}[ht!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch4/16.pdf}
+\end{figure}
 
 \textbf{Важна ў~кожны прыём ежы есьці ўволю, тады вы будзеце пачувацца сытымі да наступнага прыёму ежы.} Наступныя кампанэнты павялічваюць сытасьць, зьніжаюць голад і колькасьць зьедзенага: вада, клятчатка, цьвёрдасьць ежы (яе трэба жаваць), розныя спэцыі, фітанутрыенты, кіслы, горкі і перны смакі, пахі і да т.~п. Пах вельмі важны. Згадайце, якая нясмачная ежа, калі закладзены нос. Абавязкова нюхайце ежу перад тым, як яе зьесьці. Нават калі вы проста панюхаеце горкую чакаляду, гэта можа зьнізіць узровень гармону голаду грэліну. А наогул такія прадукты, як какава ці горкая чакаляда, імберац, чырвоны перац, памяншаюць апэтыт, павялічваюць сытасьць, зьніжаюць цягу да салодкага і могуць дапамагчы ў~пахудзеньні.
 
@@ -684,9 +759,19 @@
 
 Бабовыя, садавіна, гародніна, водарасьці, грыбы, цэльназерневае збожжа ўтрымоўваюць шмат клятчаткі, якая зьяўляецца магутным сродкам падтрыманьня сытасьці. Дасьледаваньні паказваюць, што даданьне бабовых можа павялічыць сытасьць на 31\,\% у~параўнаньні з~эквівалентнымі па макранутрыентах прадуктамі. Распушчальныя і глейкія тыпы клятчаткі, такія як пэктыны (яблык) і бэта-глюканы (авёс), даюць вялікую сытасьць: так, кожныя дадатковыя 14 грамаў клятчаткі на 10\,\% зьмяншаюць колькасьць зьяданых калёрыяў.
 
+\begin{figure}[ht!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch4/17.pdf}
+\end{figure}
+
 \textbf{Падвышаюць апэтыт і пераяданьне} высокаглікемічныя вугляводы і рафінаваныя прадукты, якія ўтрымліваюць вялікую колькасьць стымулятараў апэтыту і малую~--- тармазоў: глутамат, узмацняльнікі смаку, араматызатары, фарбавальнікі~--- некалярыйны фарбавальнік можа на 13\,\% павялічыць колькасьць зьедзенага. Акрамя гэтага, яны яшчэ й вельмі калярыйныя, бо ўтрымоўваюць шмат даданага крухмалу, соі, тлушчу, цукру, солі і нізкае ўтрыманьне клятчаткі і бялку. Найбольш небясьпечная для нашай сыстэмы насычэньня камбінацыя цукар+тлушч. У прыродзе яна амаль не сустракаецца, але вось у~гатовых прадуктах харчаваньня~--- паўсюдна. Такая ненатуральная камбінацыя стымулюе пераяданьне і правакуе харчовую залежнасьць.
 
 Уплываюць на апэтыт і іншыя чыньнікі, напрыклад, узровень фізычнай актыўнасьці, вячэрняе асьвятленьне, наяўнасьць сацыяльных кантактаў. Людзі, якія больш рухаюцца, адчуваюць сябе больш сытымі і менш ядуць, занадта яркае сьвятло ўвечары можа правакаваць начны апэтыт, а~самота ўзмацняе голад.
+
+\begin{figure}[ht!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch4/18.pdf}
+\end{figure}
 
 \textbf{Бялок зьяўляецца адным з~магутных чыньнікаў насычэньня.} У дасьледаваньнях на жывёлах навукоўцы выявілі, што менавіта ваганьні бялку ў~дыеце ўплываюць на іх паводзіны. Гэтую зьяву назвалі гіпотэзай бялковага рычага: яе сутнасьць у~тым, што жывёлы імкнуцца ў~першую чаргу набраць неабходны мінімум бялку і толькі затым зважаюць на тлушчы і вугляводы. Патрэбны набор бялку прыкметна зьніжае апэтыт і абмяжоўвае далейшае пераяданьне. Матэматычная мадэль, якая апісвае ваганьні макранутрыентаў, пацвердзіла, што доля бялку ў~агульнай колькасьці калёрыяў у~розных людзей па ўсім сьвеце сапраўды вагаецца ў~вузкіх межах (каля 10--15\,\%), у~той час як прапорцыі тлушчаў і вугляводаў моцна вар'іруюцца. У паляўнічых-зьбіральнікаў сярэдняе ўтрыманьне бялку ў~рацыёне было дастаткова высокім~--- ад 20\,\% да 30\,\% ад агульнай каларыйнасьці.
 
@@ -700,6 +785,11 @@
 Памяць, гіпакамп і колькасьць зьедзенай ежы шчыльна зьвязаныя паміж сабой. У выпадках рэтраграднай амнэзіі, калі чалавек забываецца на тое, што адбываецца зь ім, ён увесь час адчувае моцны голад і хоча есьці. Наш мозг плянуе каляраж, зыходзячы са стратэгічных мэтаў. Таму дакладная памяць аб тым, што вы зьелі сёньня, зьніжае колькасьць зьедзенага. А вось калі вы елі, адцягваючыся на тэлевізар ці інстаграм, то гэтая яда запомніцца дрэнна, і вы будзеце прыкметна пераядаць у~наступныя прыёмы ежы.
 
 \emph{У дасьледаваньні ўдзельнікі ўяўлялі, што зьядаюць 3 ці 33 салодкіх дражэ, а~затым атрымлівалі міску зь імі. Тыя, хто ва ўяўленьні маляваў 33 дражэ, у~выніку зьядалі на 60\,\% менш. Так што нават візуалізацыя вялікай колькасьці ежы прывядзе да зьніжэньня аб'ёму фактычна зьедзенай ежы.}
+
+\begin{figure*}[tb!]
+  \centering
+  \includegraphics[scale=1.5]{willpower/ch4/19.pdf}
+\end{figure*}
 
 % ((вядзіце харчовы дзёньнік запамінайце зьедзенае карыстайцеся харчовай псыхалёгіяй))
 
@@ -948,4 +1038,11 @@
 2. Якія ў~вас суадносіны талія-сьцёгны?
 
 3. Які ў~вас адсотак падскурнага тлушчу?
+
+\clearpage
+\thispagestyle{empty}
+\begin{figure}[htb!]
+  \vspace*{-0.5in}
+  \includegraphics[width=\textwidth]{willpower/ch4/full.pdf}  
+\end{figure}
 
