--- a/nutrition_no_cover.tex
+++ b/nutrition_no_cover.tex
@@ -1,6 +1,8 @@
 \documentclass[ebook,10pt,openany]{memoir}
 
 \usepackage{belaveshkin}
+\textwidth=4.5 true in
+\textheight=7 true in
 \addto\captionsbelarusian{\renewcommand{\chaptername}{Правіла}}
 \renewcommand*{\cftchaptername}{Правіла~}
 
